--- a/pgscm/templates/admin/index.html
+++ b/pgscm/templates/admin/index.html
@@ -18,7 +18,7 @@
     <script src="{{ adminlte_find_resource('js/plugins/datatables/extensions/Buttons/js/vfs_fonts.js', cdn='local', use_minified=False)}}"></script>
     <!-- page script -->
     <script>
-        $(function () {
+        $(document).ready(function () {
             var table = $('#pgs_users').DataTable({
                 "language": {
                     "url": "/static/" + '{{ g.language }}' + '.json'
